--- a/k8s/01-config-map.yaml
+++ b/k8s/01-config-map.yaml
@@ -70,7 +70,7 @@ data:
             enabled: true
         loadbalancer:
           ribbon:
-            enabled: false
+            enabled: true
         gateway:
           x-forwarded:  
             enabled: true 
